; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/subcmd/extr_exec-cmd.c_get_argv_exec_path.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/subcmd/extr_exec-cmd.c_get_argv_exec_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@argv_exec_path = common dso_local global i8* null, align 8
@subcmd_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_argv_exec_path() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i8*, i8** @argv_exec_path, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i8*, i8** @argv_exec_path, align 8
  %7 = call i8* @strdup(i8* %6)
  store i8* %7, i8** %1, align 8
  br label %24

8:                                                ; preds = %0
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @subcmd_config, i32 0, i32 1), align 4
  %10 = call i8* @getenv(i32 %9)
  store i8* %10, i8** %2, align 8
  %11 = load i8*, i8** %2, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %21

13:                                               ; preds = %8
  %14 = load i8*, i8** %2, align 8
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load i8*, i8** %2, align 8
  %20 = call i8* @strdup(i8* %19)
  store i8* %20, i8** %1, align 8
  br label %24

21:                                               ; preds = %13, %8
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @subcmd_config, i32 0, i32 0), align 4
  %23 = call i8* @system_path(i32 %22)
  store i8* %23, i8** %1, align 8
  br label %24

24:                                               ; preds = %21, %18, %5
  %25 = load i8*, i8** %1, align 8
  ret i8* %25
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @getenv(i32) #1

declare dso_local i8* @system_path(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
